<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/main_lblName"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_lblLastName"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimaryDark"/>
    <CheckBox
        android:id="@+id/checkboxPolite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_checkPolite"/>
    <Button
        android:id="@+id/btnGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_btnGreet"/>
    <Button
        android:id="@+id/btnReset"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_btnReset" />

</LinearLayout>